server/src/blk.ts
/* eslint-disable semi */
/* eslint-disable no-case-declarations */
/* eslint-disable @typescript-eslint/ban-types */
/* eslint-disable prefer-const */
/* eslint-disable no-useless-escape */
/* eslint-disable no-var */
/* eslint-disable no-control-regex */
/* eslint-disable @typescript-eslint/no-empty-interface */
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.2.7 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

export interface ICached {
  nextPos: number;
  result: any;
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<{}> = {};

  const peg$startRuleFunctions: {[id: string]: any} = { DataBlock: peg$parseDataBlock };
  let peg$startRuleFunction: () => any = peg$parseDataBlock;

  const peg$c0 = function(blk: any): any { return blockContent('', location(), blk); };
  const peg$c1 = function(head: any, tail: any): any { return notNull([head].concat(tail)); };
  const peg$c2 = peg$otherExpectation("Block");
  const peg$c3 = "{";
  const peg$c4 = peg$literalExpectation("{", false);
  const peg$c5 = "}";
  const peg$c6 = peg$literalExpectation("}", false);
  const peg$c7 = function(name: any, c: any, inner: any): any {
    var content = notNull(inner)[0];
    if (c) {
      name += ' /* ';
      name += c.value.value.replace(/^\/\//, '').replace(/^\/\*/, '').replace(/\*\/$/, '').replace(/(?:^\s+)|(?:\s+$)/, '');
      name += ' */';
    }
    return {
      '_type': 'block',
      value: blockContent(name, location(), content)
    };
  };
  const peg$c8 = peg$otherExpectation("Include");
  const peg$c9 = "include";
  const peg$c10 = peg$literalExpectation("include", false);
  const peg$c11 = function(value: any): any { return {
      '_type': 'include',
      value: {
        location: location(),
        value: value
      }
    };
  };
  const peg$c12 = peg$otherExpectation("Param");
  const peg$c13 = function(indent: any, name: any, value: any): any { return {
      '_type': 'param',
      value: {
        location: location(),
        indent: indent,
        value: [name].concat(value)
      }
    };
  };
  const peg$c14 = /^[ \t]/;
  const peg$c15 = peg$classExpectation([" ", "\t"], false, false);
  const peg$c16 = function(): any { return location(); };
  const peg$c17 = peg$otherExpectation("Value of Param");
  const peg$c18 = peg$otherExpectation("Name of Param or Block");
  const peg$c19 = "\"";
  const peg$c20 = peg$literalExpectation("\"", false);
  const peg$c21 = function(n: any): any { return '"'+n+'"'; };
  const peg$c22 = /^[a-zA-Z0-9_.]/;
  const peg$c23 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "."], false, false);
  const peg$c24 = function(): any { return text(); };
  const peg$c25 = ":";
  const peg$c26 = peg$literalExpectation(":", false);
  const peg$c27 = function(value: any): any { return value; };
  const peg$c28 = peg$otherExpectation("ParamValue");
  const peg$c29 = "=";
  const peg$c30 = peg$literalExpectation("=", false);
  const peg$c31 = function(t: any, s: any): any { return '"'+s+'"'; };
  const peg$c32 = function(t: any, v: any): any { return [t, v]; };
  const peg$c33 = peg$otherExpectation("ParamType");
  const peg$c34 = /^[a-zA-Z0-9]/;
  const peg$c35 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  const peg$c36 = peg$otherExpectation("ParamAnyValue");
  const peg$c37 = "t";
  const peg$c38 = peg$literalExpectation("t", false);
  const peg$c39 = function(v: any): any { return ["t", v]; };
  const peg$c40 = "r";
  const peg$c41 = peg$literalExpectation("r", false);
  const peg$c42 = function(v: any): any { return ["r", v]; };
  const peg$c43 = "i";
  const peg$c44 = peg$literalExpectation("i", false);
  const peg$c45 = function(v: any): any { return ["i", v]; };
  const peg$c46 = "i64";
  const peg$c47 = peg$literalExpectation("i64", false);
  const peg$c48 = function(v: any): any { return ["i64", v]; };
  const peg$c49 = "b";
  const peg$c50 = peg$literalExpectation("b", false);
  const peg$c51 = "yes";
  const peg$c52 = peg$literalExpectation("yes", false);
  const peg$c53 = "no";
  const peg$c54 = peg$literalExpectation("no", false);
  const peg$c55 = "on";
  const peg$c56 = peg$literalExpectation("on", false);
  const peg$c57 = "off";
  const peg$c58 = peg$literalExpectation("off", false);
  const peg$c59 = "true";
  const peg$c60 = peg$literalExpectation("true", false);
  const peg$c61 = "false";
  const peg$c62 = peg$literalExpectation("false", false);
  const peg$c63 = "1";
  const peg$c64 = peg$literalExpectation("1", false);
  const peg$c65 = "0";
  const peg$c66 = peg$literalExpectation("0", false);
  const peg$c67 = function(v: any): any { return ["b", v]; };
  const peg$c68 = "p2";
  const peg$c69 = peg$literalExpectation("p2", false);
  const peg$c70 = ",";
  const peg$c71 = peg$literalExpectation(",", false);
  const peg$c72 = function(n0: any, n1: any): any { return ["p2", [n0, n1]]; };
  const peg$c73 = "p3";
  const peg$c74 = peg$literalExpectation("p3", false);
  const peg$c75 = function(n0: any, n1: any, n2: any): any { return ["p3", [n0, n1, n2]]; };
  const peg$c76 = "p4";
  const peg$c77 = peg$literalExpectation("p4", false);
  const peg$c78 = function(n0: any, n1: any, n2: any, n3: any): any { return ["p4", [n0, n1, n2, n3]]; };
  const peg$c79 = "ip2";
  const peg$c80 = peg$literalExpectation("ip2", false);
  const peg$c81 = function(n0: any, n1: any): any { return ["ip2", [n0, n1]]; };
  const peg$c82 = "ip3";
  const peg$c83 = peg$literalExpectation("ip3", false);
  const peg$c84 = function(n0: any, n1: any, n2: any): any { return ["ip3", [n0, n1, n2]]; };
  const peg$c85 = "ip4";
  const peg$c86 = peg$literalExpectation("ip4", false);
  const peg$c87 = function(n0: any, n1: any, n2: any, n3: any): any { return ["ip4", [n0, n1, n2, n3]]; };
  const peg$c88 = "c";
  const peg$c89 = peg$literalExpectation("c", false);
  const peg$c90 = function(n0: any, n1: any, n2: any, n3: any): any { return ["c", [n0, n1, n2, n3]]; };
  const peg$c91 = "m";
  const peg$c92 = peg$literalExpectation("m", false);
  const peg$c93 = "[";
  const peg$c94 = peg$literalExpectation("[", false);
  const peg$c95 = "]";
  const peg$c96 = peg$literalExpectation("]", false);
  const peg$c97 = function(row0: any, row1: any, row2: any, row3: any): any { return ["m", [row0, row1, row2, row3]]; };
  const peg$c98 = function(n0: any, n1: any, n2: any): any { return [n0, n1, n2]; };
  const peg$c99 = peg$otherExpectation("Comment");
  const peg$c100 = function(indent: any, c: any): any { return {
      '_type': 'comment',
      value: {
        location: location(),
        indent: indent,
        value: c.value,
        format: c.format
      }
    };
  };
  const peg$c101 = peg$otherExpectation("CommentLine");
  const peg$c102 = "//";
  const peg$c103 = peg$literalExpectation("//", false);
  const peg$c104 = function(): any { return { format: 'line', value: text() }; };
  const peg$c105 = peg$otherExpectation("CommentBlock");
  const peg$c106 = "/*";
  const peg$c107 = peg$literalExpectation("/*", false);
  const peg$c108 = "*/";
  const peg$c109 = peg$literalExpectation("*/", false);
  const peg$c110 = function(): any { return { format: 'block', value: text() }; };
  const peg$c111 = peg$otherExpectation("Empty line");
  const peg$c112 = function(): any { return { '_type': 'empty line', value: { location: location() } }; };
  const peg$c113 = peg$otherExpectation("Strings");
  const peg$c114 = peg$otherExpectation("QuotedString");
  const peg$c115 = peg$otherExpectation("String");
  const peg$c116 = /^[^"]/;
  const peg$c117 = peg$classExpectation(["\""], true, false);
  const peg$c118 = peg$otherExpectation("SString");
  const peg$c119 = /^[^']/;
  const peg$c120 = peg$classExpectation(["'"], true, false);
  const peg$c121 = peg$otherExpectation("Empty String");
  const peg$c122 = "'";
  const peg$c123 = peg$literalExpectation("'", false);
  const peg$c124 = function(): any { return ''; };
  const peg$c125 = /^[\r\n} ]/;
  const peg$c126 = peg$classExpectation(["\r", "\n", "}", " "], false, false);
  const peg$c127 = function(s: any): any { return s; };
  const peg$c128 = peg$otherExpectation("RealNumber");
  const peg$c129 = /^[0-9.\-]/;
  const peg$c130 = peg$classExpectation([["0", "9"], ".", "-"], false, false);
  const peg$c131 = peg$otherExpectation("IntNumber");
  const peg$c132 = /^[0-9\-]/;
  const peg$c133 = peg$classExpectation([["0", "9"], "-"], false, false);
  const peg$c134 = peg$anyExpectation();
  const peg$c135 = peg$otherExpectation("Whitespace");
  const peg$c136 = /^[ \r\n\t]/;
  const peg$c137 = peg$classExpectation([" ", "\r", "\n", "\t"], false, false);
  const peg$c138 = function(): any { return null; };
  const peg$c139 = peg$otherExpectation("Spaces");
  const peg$c140 = peg$otherExpectation("EndOfLine");
  const peg$c141 = /^[\r\n]/;
  const peg$c142 = peg$classExpectation(["\r", "\n"], false, false);
  const peg$c143 = function(): any { return "EOL"; };
  const peg$c144 = peg$otherExpectation("EndOfParam");
  const peg$c145 = ";";
  const peg$c146 = peg$literalExpectation(";", false);
  const peg$c147 = peg$otherExpectation("EndOfParamRelaxed");
  const peg$c148 = "";
  const peg$c149 = peg$otherExpectation("EndOfFile");
  const peg$c150 = function(): any { return "EOF"; };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  const peg$resultsCache: {[id: number]: ICached} = {};

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseDataBlock(): any {
    let s0, s1;

    const key = peg$currPos * 50 + 0;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseDataBlockElements();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseDataBlockElements(): any {
    let s0, s1, s2, s3;

    const key = peg$currPos * 50 + 1;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseDataBlockElement();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseDataBlockElement();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseDataBlockElement();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseDataBlockElement(): any {
    let s0;

    const key = peg$currPos * 50 + 2;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseBlock();
    if (s0 === peg$FAILED) {
      s0 = peg$parseParam();
      if (s0 === peg$FAILED) {
        s0 = peg$parseInclude();
        if (s0 === peg$FAILED) {
          s0 = peg$parseComment();
          if (s0 === peg$FAILED) {
            s0 = peg$parseEmptyLine();
            if (s0 === peg$FAILED) {
              s0 = peg$parseSpaces();
            }
          }
        }
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseBlock(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    const key = peg$currPos * 50 + 3;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseName();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseComment();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s5 = peg$c3;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c4); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parseDataBlockElements();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parseDataBlockElements();
              }
              if (s6 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 125) {
                  s7 = peg$c5;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c6); }
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c7(s1, s3, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseInclude(): any {
    let s0, s1, s2, s3;

    const key = peg$currPos * 50 + 4;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c9) {
      s1 = peg$c9;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c10); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseStrings();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c11(s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseParam(): any {
    let s0, s1, s2, s3, s4, s5;

    const key = peg$currPos * 50 + 5;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseIndent();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseName();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseTypeWithValue();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseEOPR();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c13(s1, s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseIndent(): any {
    let s0, s1, s2;

    const key = peg$currPos * 50 + 6;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    if (peg$c14.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      if (peg$c14.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c15); }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c16();
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseValue(): any {
    let s0, s1;

    const key = peg$currPos * 50 + 7;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    peg$silentFails++;
    s0 = peg$parseStrings();
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c17); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseName(): any {
    let s0, s1, s2, s3;

    const key = peg$currPos * 50 + 8;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
